--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div>
 			<h1 class="xTsec">
 				Olá, eu sou <span> Artur </span>
-			<p> Desenvovedor web criativo: busco desenvolver experiências digitais excepcionais e interfaces intuitivas</p>
+			<p> Desenvolvedor Web criativo e pragmático. Crio experiências digitais eficientes e interfaces intuitivas, focadas em simplificar processos e otimizar a logística de produção do seu negócio.</p>
 			<a class="xBut efeito-cursor">Ver Projetos</a>
 
 			</h1>
@@ -169,3 +169,4 @@
 
 </script>
 </html>
+
