--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<h3>Projeto NAT</h3>
 						<p> Funciona em redes de computadores que implementa uma função de NAT no "router" da topologia em anexo. A função deve funcionar considerando uma tabela 5-tuple (IP origem, porta origem, IP destino, porta destino, protocolo de transporte) e substituindo o IP de origem (privado) para o endereço público do NAT (8.8.254.254).
 						</p>
-						<a href="https://github.com/FaaavL/NAT--Redes"> Ver Projeto ➢</a>
+						<a href="https://github.com/FaaavL/NAT--Redes" class="efeito-cursor"> Ver Projeto ➢</a>
 					</div>
 				</div>
 
@@ -57,7 +57,7 @@
 						<h3>Projeto NAT</h3>
 						<p> Funciona em redes de computadores que implementa uma função de NAT no "router" da topologia em anexo. A função deve funcionar considerando uma tabela 5-tuple (IP origem, porta origem, IP destino, porta destino, protocolo de transporte) e substituindo o IP de origem (privado) para o endereço público do NAT (8.8.254.254).
 						</p>
-						<a href="https://github.com/FaaavL/NAT--Redes"> Ver Projeto ➢</a>
+						<a href="https://github.com/FaaavL/NAT--Redes" class="efeito-cursor"> Ver Projeto ➢</a>
 					</div>
 				</div>
 
@@ -68,7 +68,7 @@
 						<h3>Projeto NAT</h3>
 						<p> Funciona em redes de computadores que implementa uma função de NAT no "router" da topologia em anexo. A função deve funcionar considerando uma tabela 5-tuple (IP origem, porta origem, IP destino, porta destino, protocolo de transporte) e substituindo o IP de origem (privado) para o endereço público do NAT (8.8.254.254).
 						</p>
-						<a href="https://github.com/FaaavL/NAT--Redes"> Ver Projeto ➢</a>
+						<a href="https://github.com/FaaavL/NAT--Redes" class="efeito-cursor"> Ver Projeto ➢</a>
 					</div>
 				</div>
 
@@ -103,7 +103,7 @@
 		<h2 class="titulo">Contato</h2>
 
 		<div class="botoes-contatto">
-			<a href="https://wa.me/5555981317705?text=Ol%C3%A1!!%20Fala%20comigo" class="botao-contato wpp">
+			<a href="https://wa.me/5555981317705?text=Ol%C3%A1!!%20Fala%20comigo" class="botao-contato wpp efeito-cursor">
 			<img src="">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
 				width="24" height="24" fill="currentColor" aria-label="WhatsApp" role="img">
@@ -114,7 +114,7 @@
 			<span>WhatsApp</span>
 			</a>
 
-			<a href="mailto:artur.devx@gmail.com" class="botao-contato email">
+			<a href="mailto:artur.devx@gmail.com" class="botao-contato email efeito-cursor">
 			<img src="">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
 			     width="24" height="24" fill="currentColor">
@@ -123,17 +123,15 @@
 			<span>Email</span>
 			</a>
 
-			<a href="https://www.linkedin.com/in/artur-c-bba071229/" class="botao-contato Linkedin">
+			<a href="https://www.linkedin.com/in/artur-c-bba071229/" class="botao-contato Linkedin efeito-cursor">
 			<img src="">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
 			     width="24" height="24" aria-label="LinkedIn" role="img">
 			  <rect x="3" y="3" width="18" height="18" rx="2" fill="none" stroke="currentColor" stroke-width="2"/>
 
-			  <!-- i -->
 			  <circle cx="8" cy="8" r="1" fill="currentColor"/>
 			  <rect x="7" y="10" width="2" height="7" fill="currentColor"/>
 
-			  <!-- n (bem minimal/block) -->
 			  <rect x="11" y="10" width="2" height="7" fill="currentColor"/>
 			  <rect x="13" y="10" width="5" height="2" fill="currentColor"/>
 			  <rect x="16" y="12" width="2" height="5" fill="currentColor"/>
@@ -169,4 +167,5 @@
 
 </script>
 </html>
+
 
