--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
 			<div class="conteudo-sobre">
 				<h2> Desenvolvedor apaixonado por computação </h2>
 				<p>
-					Graduado em Ciências Humanas e Sociais com ênfase em Ciência Política, Sociologia e Antropologia pela Universidade Federal de Santa Maria (2023). Pós-Graduado em Direito Penal e Processual Penal pelo Centro Universitário União das Américas (CUUAD) - Descomplica (2024). Atualmente, cursa uma especialização em Gestão Pública na Universidade Federal do Rio Grande (FURG) e a graduação em Direito na Universidade Federal do Pampa (UNIPAMPA), campus São Borja, com previsão de conclusão em 2029. Durante a graduação em Ciências Humanas, atuou como voluntário em projetos de pesquisa e extensão relacionados à análise de fenômenos sociais e políticos.
+					Graduado em Ciências Humanas e Sociais pela Universidade Federal de Santa Maria (2023), com ênfase em Ciência Política, Sociologia e Antropologia, e pós-graduado em Direito Penal e Processual Penal pelo Centro Universitário União das Américas (CUUAD) – Descomplica (2024). Atualmente, curso especialização em Gestão Pública na FURG e graduação em Direito na UNIPAMPA (campus São Borja), com previsão de conclusão em 2029.
 				</p>
+				<p> Nos últimos anos, venho direcionando minha carreira para desenvolvimento web, unindo minha base analítica e experiência em pesquisa à criação de interfaces intuitivas, acessíveis e orientadas a dados, com foco em resolver problemas reais de forma prática. </p>
 				<p>
-					Minha abordagem combina criatividade com funcionalidade, resultando em produtos
+					Minha abordagem combina criatividade com funcionalidade, resultando em produtos originais.
 				</p>
 				<div class="habilidades">
 					<span class="tag efeito-cursor">HTML5</span>
@@ -167,5 +168,6 @@
 
 </script>
 </html>
+
 
 
