--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
 
 				<div class="Card1">
-					<img class="img-projeto" src="natttt.png">
+					<img class="img-projeto" src="alura.png">
 					<div class="inf-nat">
-						<h3>Projeto NAT</h3>
-						<p> Funciona em redes de computadores que implementa uma função de NAT no "router" da topologia em anexo. A função deve funcionar considerando uma tabela 5-tuple (IP origem, porta origem, IP destino, porta destino, protocolo de transporte) e substituindo o IP de origem (privado) para o endereço público do NAT (8.8.254.254).
+						<h3>Desafio ALURA/2025</h3>
+						<p> Projeto desenvolvido no desafio da Imersão IA (Alura + Google) para análise de manchetes: o usuário insere uma notícia e o sistema retorna uma avaliação sobre a probabilidade de ser verdadeira ou falsa, usando o Google Gemini e dados de referência (como bases do IBGE) para embasar a resposta.
 						</p>
-						<a href="https://github.com/FaaavL/NAT--Redes" class="efeito-cursor"> Ver Projeto ➢</a>
+						<a href="https://github.com/FaaavL/ALURA---IA---DESAFIO" class="efeito-cursor"> Ver Projeto ➢</a>
 					</div>
 				</div>
 
@@ -168,6 +168,7 @@
 
 </script>
 </html>
+
 
 
 
