--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 				<div class="Card1">
-					<img class="img-projeto" src="alura.png">
+					<img class="img-projeto" src="alura.jpg">
 					<div class="inf-nat">
 						<h3>Desafio ALURA/2025</h3>
 						<p> Projeto desenvolvido no desafio da Imersão IA (Alura + Google) para análise de manchetes: o usuário insere uma notícia e o sistema retorna uma avaliação sobre a probabilidade de ser verdadeira ou falsa, usando o Google Gemini e dados de referência (como bases do IBGE) para embasar a resposta.
@@ -168,6 +168,7 @@
 
 </script>
 </html>
+
 
 
 
